<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="African Living"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center|bottom"
        android:paddingBottom="24dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:transitionName="transit_launch_icon"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_enter_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_enter_pw" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_auto_login"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:checked="false"/>

    <CheckBox
        android:id="@+id/cb_remember_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/string_remember_pw"
        app:layout_constraintBottom_toBottomOf="@+id/cb_autologin"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/cb_autologin"
        android:checked="false"/>

    <Button
        android:id="@+id/bn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_button2"
        android:text="@string/string_user_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_autologin" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_or"
        app:layout_constraintEnd_toEndOf="@+id/bn_login"
        app:layout_constraintStart_toStartOf="@+id/bn_login"
        app:layout_constraintTop_toBottomOf="@+id/bn_login" />

    <Button
        android:id="@+id/bn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_button2"
        android:text="@string/string_enter"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/bn_login"
        app:layout_constraintStart_toStartOf="@+id/bn_login"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/tv_tosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_tosignup"
        app:layout_constraintEnd_toEndOf="@+id/bn_enter"
        app:layout_constraintStart_toStartOf="@+id/bn_enter"
        app:layout_constraintTop_toBottomOf="@+id/bn_enter" />

</android.support.constraint.ConstraintLayout>