<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.crazydwarf.comm_library.view.MaterialEditText
        android:id="@+id/et_phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:textSize="24sp"
        android:hint="@string/string_enter_phone_no"
        android:paddingLeft="8dp"

        app:layout_constraintEnd_toStartOf="@+id/ib_used_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:met_maxCharacters="11"
        app:met_minCharacters="11"
        app:met_hideUnderline="true"
        app:met_primaryColor="@color/colorBlue"
        />

    <ImageButton
        android:id="@+id/ib_used_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_account_circle_blue_32dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_phonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phonenumber" />

    <TextView
        android:id="@+id/tv_account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_account_info"
        app:layout_constraintStart_toStartOf="@+id/et_phonenumber"
        app:layout_constraintTop_toBottomOf="@+id/et_phonenumber" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/string_recharge_amount"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_info" />

    <TextView
        android:id="@+id/tv_discount_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_discount_info"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView41" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.333" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.667" />

    <Button
        android:id="@+id/bn_recharge_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/color_state_bn_bg"
        android:text="@string/string_flow_50"
        android:textColor="@drawable/color_state_bn_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <Button
        android:id="@+id/bn_recharge_50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/color_state_bn_bg"
        android:text="@string/string_flow_500"
        android:textColor="@drawable/color_state_bn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bn_recharge_10"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/bn_recharge_10" />

    <Button
        android:id="@+id/bn_recharge_define"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/color_state_bn_bg"
        android:text="@string/string_flow_others"
        android:textColor="@drawable/color_state_bn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bn_recharge_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/bn_recharge_50" />

    <Button
        android:id="@+id/bn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorTransWhite"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_recharge_history"
        android:paddingVertical="4dp"
        android:text="@string/string_recharge_details"
        android:textStyle=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bn_bundle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransWhite"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_recharge_bundle"
        android:paddingVertical="4dp"
        android:text="@string/string_bundle_recharge"
        android:textStyle=""
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/bn_history" />

    <Button
        android:id="@+id/bn_operatorinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorTransWhite"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_recharge_operatorinfo"
        android:paddingVertical="4dp"
        android:text="@string/string_operator_expense"
        android:textStyle=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/bn_bundle" />

</android.support.constraint.ConstraintLayout>